<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:backgroundTint="@color/colorPrimary"
    tools:context="com.digitalnitb.manitattendence.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/welcome_screen_text"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnLogin"
        android:layout_marginBottom="89dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/start_activity_register"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/already_have_account"
        android:textColor="@android:color/white" />
</RelativeLayout>
